test_scripts/errors/for_iterable_undefined.shm
for x in undefined_var {}
