test_scripts/errors/for_iterable_undefined.stderr
 1 | for x in undefined_var {}
              ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
